sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:31: error: e is already defined as variable e
        var e=getValeur(k)
            ^